# talent-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  Dockerfile  LICENSE  README.md  README_CN.md  SMOKE_TEST.md  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b14b17b06495_initial_schema.py  c2a4f8d1e9b3_reconcile_users_email_auth.py  d3e5f7a9b1c4_add_interview_turns_table.py  e4f6a8b2c5d7_add_applications_table.py
backend/app/: main.py
backend/app/agents/: improver.py  interviewer.py  matcher.py  parser.py  rewriter.py
backend/app/api/: applications.py  auth.py  integrations.py  interview.py  match.py  projects.py  quiz.py  resume.py  resume_export.py  resume_upload.py
backend/app/core/: auth.py  config.py  db.py  deps.py  llm.py  mail.py  rate_limit.py  sse.py
backend/app/models/: __init__.py  application.py  interview.py  project.py  user.py
backend/app/schemas/: agent_models.py
backend/app/services/: cover_letter.py  embedder.py  github_indexer.py  improvement_planner.py  indexer.py  interview_debrief.py  interview_prompts.py  interview_service.py  jd_parser.py  local_project_parser.py  match_service.py  orchestrator.py  quiz_service.py  resume_parser.py  resume_writer.py  state_store.py  vector_store.py
docs/: DEPLOY.md
frontend/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
frontend/src/: auth.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/: app-shell.tsx  cursor-dots.tsx  cursor-glow.tsx  email-verify-banner.tsx  home-workbench.tsx  nav.tsx  providers.tsx  user-menu.tsx
frontend/src/i18n/: context.tsx  en.json  zh.json
frontend/src/lib/: api.ts  auth-context.tsx  clipboard.ts  sse.ts
frontend/src/types/: next-auth.d.ts
reviews/: 2026-05-28_deep_code_security_and_growth.md  README.md
scripts/: alembic_init.sh  check_health.sh  check_index.py  endpoint_checks.sh  install_docker_wsl.sh  setup_docker_mirror.sh  smoke_test.sh
src/talent_agent/: __init__.py  config.py  llm.py  store.py
src/talent_agent/agents/: improver.py  interviewer.py  matcher.py  parser.py  rewriter.py
src/talent_agent/cli/: match.py
src/talent_agent/graph/: __init__.py  pipeline.py
src/talent_agent/indexer/: cli.py  scanner.py
src/talent_agent/ui/: app.py
tests/: conftest.py  test_matcher.py  test_parser.py  test_smoke.py
tests/_legacy/: README.md
(+12 files in other folders)
