[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talent-agent"
version = "0.1.0"
description = "Agentic JD-to-project matching platform — DeepSeek + BGE + Qdrant + Streamlit"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mengxuan Liu" }]
dependencies = [
    "openai>=1.50.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.0.0",
]

[project.scripts]
talent-index = "talent_agent.indexer.cli:main"
talent-match = "talent_agent.cli.match:main"
talent-ui = "talent_agent.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
