[project]
name = "talent-agent-backend"
version = "0.2.0"
description = "FastAPI backend for talent-agent — agentic JD-to-project matching"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mengxuan Liu" }]

dependencies = [
    # web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",

    # db
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",

    # vector + embedding
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",

    # LLM + parsing
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # github + git
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
